add reverseList & findMiddleNode implementation